--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jishos</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/wanakana"></script>
     <style>
         body {
             background-color: #4272d0;
@@ -21,6 +22,8 @@
             padding: 0.5rem;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
             z-index: 1;
+            display: flex;
+            align-items: center;
         }
 
         .search-bar input {
@@ -33,13 +36,41 @@
             color: #e5e7eb;
         }
 
+        .search-bar .replace-button {
+            background-color: #1f2937;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            color: #e5e7eb;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            margin-left: 0.5rem;
+        }
+
+        .search-bar .replace-button img {
+            width: 1rem;
+            height: 1rem;
+            margin-left: 0.5rem;
+        }
+
+        .conversion {
+            font-size: 0.8rem;
+            color: #e5e7eb;
+            padding: 0.5rem 1rem;
+        }
+
+        .error {
+            color: #ff0000;
+            font-size: 0.8rem;
+            padding: 0.2rem 1rem;
+        }
+
         .grid-container {
             flex-grow: 1;
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 0.5rem;
-            padding: 1.5rem 0.5rem 0.5rem;
-            /* Increased top padding to avoid overlap */
             overflow-y: auto;
         }
 
@@ -60,7 +91,12 @@
 <body>
     <div class="search-bar">
         <input type="text" id="all-input" placeholder="Search all" autofocus>
+        <button class="replace-button" id="replace-button">Replace with Hiragana
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/ok.png" alt="OK Icon" />
+        </button>
     </div>
+    <div class="conversion" id="conversion"></div>
+    <div class="error" id="error"></div>
     <div class="grid-container">
         <div class="iframe-container">
             <iframe id="iframe1" tabIndex="-1"></iframe>
@@ -72,12 +108,39 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const inputField = document.getElementById('all-input');
+        const replaceButton = document.getElementById('replace-button');
+        const conversionField = document.getElementById('conversion');
+        const errorField = document.getElementById('error');
         inputField.value = urlParams.get('all') || '';
+
+        // Focus and set the cursor position to the end of the input field after a short delay
+        setTimeout(() => {
+            inputField.focus();
+            inputField.setSelectionRange(inputField.value.length, inputField.value.length);
+        }, 0);
 
         inputField.addEventListener('input', () => {
             const newUrl = new URL(window.location.href);
             newUrl.searchParams.set('all', inputField.value);
             window.location.href = newUrl.href;
+            updateConversion();
+        });
+
+        replaceButton.addEventListener('click', () => {
+            const text = inputField.value.trim();
+            if (text === '') {
+                return;
+            }
+
+            try {
+                const hiragana = wanakana.toHiragana(text);
+                inputField.value = hiragana;
+                const newUrl = new URL(window.location.href);
+                newUrl.searchParams.set('all', hiragana);
+                window.location.href = newUrl.href;
+            } catch (error) {
+                errorField.textContent = 'Error: ' + error.message;
+            }
         });
 
         function updateUrls() {
@@ -92,10 +155,27 @@
             iframe2.src = urls[1];
         }
 
+        function updateConversion() {
+            const text = inputField.value.trim();
+            if (text === '') {
+                conversionField.textContent = '';
+                errorField.textContent = '';
+                return;
+            }
+
+            try {
+                const hiragana = wanakana.toHiragana(text);
+                conversionField.textContent = hiragana;
+                errorField.textContent = '';
+            } catch (error) {
+                conversionField.textContent = '';
+                errorField.textContent = 'Error: ' + error.message;
+            }
+        }
+
         updateUrls();
-        setInterval(() => {
-            inputField.focus();
-        }, 100);
+        updateConversion();
+
     </script>
 </body>
 
