--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
+            font-family: Arial, sans-serif;
+        }
+
+        .search-container {
+            background-color: #1f2937;
+            padding: 0.5rem;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+            z-index: 1;
+            border-radius: 0.5rem;
+            margin: 1rem;
         }
 
         .search-bar {
-            background-color: #1f2937;
-            padding: 0.5rem;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-            z-index: 1;
             display: flex;
             align-items: center;
         }
@@ -32,12 +38,18 @@
             font-size: 1rem;
             border-radius: 0.5rem;
             border: none;
-            background-color: #1f2937;
+            background-color: #2d3748;
             color: #e5e7eb;
+            transition: background-color 0.3s;
+        }
+
+        .search-bar input:focus {
+            background-color: #4a5568;
+            outline: none;
         }
 
         .search-bar .replace-button {
-            background-color: #1f2937;
+            background-color: #4a5568;
             border: none;
             padding: 0.5rem 1rem;
             font-size: 1rem;
@@ -46,12 +58,13 @@
             display: flex;
             align-items: center;
             margin-left: 0.5rem;
+            border-radius: 0.5rem;
+            transition: background-color 0.3s, box-shadow 0.3s;
         }
 
-        .search-bar .replace-button img {
-            width: 1rem;
-            height: 1rem;
-            margin-left: 0.5rem;
+        .search-bar .replace-button:hover {
+            background-color: #2c5282;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .conversion {
@@ -72,10 +85,14 @@
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 0.5rem;
             overflow-y: auto;
+            margin: 1rem;
         }
 
         .iframe-container {
             height: 100%;
+            border-radius: 0.5rem;
+            overflow: hidden;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
         }
 
         iframe {
@@ -83,20 +100,21 @@
             height: 100%;
             border: none;
             background-color: #1f2937;
-            border-radius: 0.5rem;
         }
     </style>
 </head>
 
 <body>
-    <div class="search-bar">
-        <input type="text" id="all-input" placeholder="Search all" autofocus>
-        <button class="replace-button" id="replace-button">Replace with Hiragana
-            <img src="https://img.icons8.com/ios-filled/50/ffffff/ok.png" alt="OK Icon" />
-        </button>
+    <div class="search-container">
+        <div class="search-bar">
+            <input type="text" id="all-input" placeholder="Search all" autofocus>
+            <button class="replace-button" id="replace-button">Replace with Hiragana
+                <img src="https://img.icons8.com/ios-filled/50/ffffff/ok.png" alt="OK Icon" />
+            </button>
+        </div>
+        <div class="conversion" id="conversion"></div>
+        <div class="error" id="error"></div>
     </div>
-    <div class="conversion" id="conversion"></div>
-    <div class="error" id="error"></div>
     <div class="grid-container">
         <div class="iframe-container">
             <iframe id="iframe1" tabIndex="-1"></iframe>
