--- a/index.html
+++ b/index.html
@@ -48,11 +48,24 @@
             outline: none;
         }
 
-        .search-bar .replace-button {
+        .conversion-container {
+            display: flex;
+            align-items: center;
+            margin-top: 0.5rem;
+        }
+
+        .conversion {
+            font-size: 0.8rem;
+            color: #e5e7eb;
+            padding: 0.5rem 1rem;
+            flex-grow: 1;
+        }
+
+        .replace-button {
             background-color: #4a5568;
             border: none;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
+            padding: 0.2rem 0.5rem;
+            font-size: 0.8rem;
             color: #e5e7eb;
             cursor: pointer;
             display: flex;
@@ -62,15 +75,15 @@
             transition: background-color 0.3s, box-shadow 0.3s;
         }
 
-        .search-bar .replace-button:hover {
+        .replace-button:hover {
             background-color: #2c5282;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        .conversion {
-            font-size: 0.8rem;
-            color: #e5e7eb;
-            padding: 0.5rem 1rem;
+        .replace-button img {
+            width: 20px;
+            height: 20px;
+            margin-right: 0.2rem;
         }
 
         .error {
@@ -108,11 +121,13 @@
     <div class="search-container">
         <div class="search-bar">
             <input type="text" id="all-input" placeholder="Search all" autofocus>
-            <button class="replace-button" id="replace-button">Replace with Hiragana
-                <img src="https://img.icons8.com/ios-filled/50/ffffff/ok.png" alt="OK Icon" />
+        </div>
+        <div class="conversion-container">
+            <div class="conversion" id="conversion"></div>
+            <button class="replace-button" id="replace-button">
+                <img src="https://img.icons8.com/ios-filled/20/ffffff/ok.png" alt="OK Icon" />
             </button>
         </div>
-        <div class="conversion" id="conversion"></div>
         <div class="error" id="error"></div>
     </div>
     <div class="grid-container">
@@ -193,7 +208,9 @@
 
         updateUrls();
         updateConversion();
-
+        setTimeout(() => {
+            inputField.focus()
+        }, 1000);
     </script>
 </body>
 
