--- a/index.html
+++ b/index.html
@@ -106,6 +106,25 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
+        .translate-button {
+            background-color: #4a5568;
+            border: none;
+            padding: 0.2rem 0.5rem;
+            font-size: 0.8rem;
+            color: #e5e7eb;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            margin-left: 0.5rem;
+            border-radius: 0.5rem;
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
+
+        .translate-button:hover {
+            background-color: #2c5282;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
         .error {
             color: #ff0000;
             font-size: 0.8rem;
@@ -141,6 +160,7 @@
     <div class="search-container">
         <div class="search-bar">
             <input type="text" id="all-input" placeholder="Search all" autofocus>
+            <button class="translate-button" id="translate-button">Translate</button>
         </div>
         <div class="conversion-container">
             <div class="conversion" id="conversion"></div>
@@ -164,6 +184,7 @@
         const inputField = document.getElementById('all-input');
         const replaceButton = document.getElementById('replace-button');
         const reloadButton = document.getElementById('reload-button');
+        const translateButton = document.getElementById('translate-button');
         const conversionField = document.getElementById('conversion');
         const errorField = document.getElementById('error');
         inputField.value = urlParams.get('all') || '';
@@ -205,6 +226,15 @@
             }
         });
 
+        translateButton.addEventListener('click', () => {
+            const text = inputField.value.trim();
+            if (text === '') {
+                return;
+            }
+
+            const url = `https://translate.google.com/?sl=auto&tl=en&text=${encodeURIComponent(text)}`;
+            window.open(url, '_blank');
+        });
         reloadButton.addEventListener('click', () => {
             const newUrl = new URL(window.location.href);
             newUrl.searchParams.set('all', inputField.value);
