--- a/index.html
+++ b/index.html
@@ -7,176 +7,34 @@
     <title>jishos</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/wanakana"></script>
-    <style>
-        body {
-            background-color: #4272d0;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            font-family: Arial, sans-serif;
-        }
-
-        .search-container {
-            background-color: #1f2937;
-            padding: 0.5rem;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-            z-index: 1;
-            border-radius: 0.5rem;
-            margin: 1rem 1rem 0% 1rem;
-
-        }
-
-        .search-bar {
-            display: flex;
-            align-items: center;
-        }
-
-        .search-bar input {
-            width: 100%;
-            padding: 0.5rem 1rem;
-            font-size: 1rem;
-            border-radius: 0.5rem;
-            border: none;
-            background-color: #2d3748;
-            color: #e5e7eb;
-            transition: background-color 0.3s;
-        }
-
-        .search-bar input:focus {
-            background-color: #4a5568;
-            outline: none;
-        }
-
-        .conversion-container {
-            display: flex;
-            align-items: center;
-            margin-top: 0.5rem;
-        }
-
-        .conversion {
-            font-size: 0.8rem;
-            color: #e5e7eb;
-            padding: 0.5rem 1rem;
-            flex-grow: 1;
-        }
-
-        .replace-button {
-            background-color: #4a5568;
-            border: none;
-            padding: 0.2rem 0.5rem;
-            font-size: 0.8rem;
-            color: #e5e7eb;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            margin-left: 0.5rem;
-            border-radius: 0.5rem;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
-
-        .replace-button:hover {
-            background-color: #2c5282;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .replace-button img {
-            width: 20px;
-            height: 20px;
-            margin-right: 0.2rem;
-        }
-
-        .reload-button {
-            background-color: #4a5568;
-            border: none;
-            padding: 0.2rem 0.5rem;
-            font-size: 0.8rem;
-            color: #e5e7eb;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            margin-left: 0.5rem;
-            border-radius: 0.5rem;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
-
-        .reload-button:hover {
-            background-color: #2c5282;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .translate-button {
-            background-color: #4a5568;
-            border: none;
-            padding: 0.2rem 0.5rem;
-            font-size: 0.8rem;
-            color: #e5e7eb;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            margin-left: 0.5rem;
-            border-radius: 0.5rem;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
-
-        .translate-button:hover {
-            background-color: #2c5282;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .error {
-            color: #ff0000;
-            font-size: 0.8rem;
-            padding: 0.2rem 1rem;
-        }
-
-        .grid-container {
-            flex-grow: 1;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 0.5rem;
-            overflow-y: auto;
-            margin: 1rem;
-        }
-
-        .iframe-container {
-            height: 100%;
-            border-radius: 0.5rem;
-            overflow: hidden;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-        }
-
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            background-color: #1f2937;
-        }
-    </style>
 </head>
 
-<body>
-    <div class="search-container">
-        <div class="search-bar">
-            <input type="text" id="all-input" placeholder="Search all" autofocus>
-            <button class="translate-button" id="translate-button">Translate</button>
+<body class="h-screen bg-blue-600 flex flex-col">
+    <div class="bg-gray-900 p-2 shadow-md rounded-md z-10 mt-4 mx-4">
+        <div class="flex items-center">
+            <input type="text" id="all-input" placeholder="Search all" autofocus
+                class="w-full p-2 text-lg rounded-md bg-gray-700 text-gray-200 border-0 focus:bg-gray-800 focus:outline-none transition duration-300"><button
+                id="reload-button"
+                class="bg-gray-700 hover:bg-blue-800 text-gray-200 text-lg p-2 rounded-md border-0 cursor-pointer transition duration-300 ml-2">Reload</button>
         </div>
-        <div class="conversion-container">
-            <div class="conversion" id="conversion"></div>
-            <button class="replace-button" id="replace-button">
-                <img src="https://img.icons8.com/ios-filled/20/ffffff/ok.png" alt="OK Icon" />
+        <div class="flex items-center mt-2">
+            <div id="conversion" class="text-lg text-gray-200 p-2 flex-grow"></div>
+            <button id="replace-button"
+                class="bg-gray-700 hover:bg-blue-800 text-gray-200 text-lg p-2 rounded-md border-0 cursor-pointer transition duration-300">
+                <img src="https://img.icons8.com/?size=27&id=45026&format=png&color=ffffff" alt="OK Icon" />
+               
             </button>
-            <button class="reload-button" id="reload-button">Reload</button>
+            <button id="translate-button"
+                class="bg-gray-700 hover:bg-blue-800 text-gray-200 text-lg p-2 rounded-md border-0 cursor-pointer transition duration-300"> <img src="https://img.icons8.com/?size=27&id=30633&format=png&color=ffffff" alt="OK Icon" /></button>
+
         </div>
-        <div class="error" id="error"></div>
     </div>
-    <div class="grid-container">
-        <div class="iframe-container">
-            <iframe id="iframe1" tabIndex="-1"></iframe>
+    <div class="flex-grow grid grid-cols-2 gap-2 mt-4 mx-4 overflow-y-auto">
+        <div class="h-full rounded-md overflow-hidden shadow-md">
+            <iframe id="iframe1" tabIndex="-1" class="w-full h-full border-0 bg-gray-900"></iframe>
         </div>
-        <div class="iframe-container">
-            <iframe id="iframe2" tabIndex="-1"></iframe>
+        <div class="h-full rounded-md overflow-hidden shadow-md">
+            <iframe id="iframe2" tabIndex="-1" class="w-full h-full border-0 bg-gray-900"></iframe>
         </div>
     </div>
     <script>
@@ -186,7 +44,6 @@
         const reloadButton = document.getElementById('reload-button');
         const translateButton = document.getElementById('translate-button');
         const conversionField = document.getElementById('conversion');
-        const errorField = document.getElementById('error');
         inputField.value = urlParams.get('all') || '';
 
         // Focus and set the cursor position to the end of the input field after a short delay
@@ -222,7 +79,7 @@
                 window.location.href = newUrl.href;
                 updateUrls();
             } catch (error) {
-                errorField.textContent = 'Error: ' + error.message;
+                conversionField.textContent = 'Error: ' + error.message;
             }
         });
 
@@ -258,17 +115,15 @@
             const text = inputField.value.trim();
             if (text === '') {
                 conversionField.textContent = '';
-                errorField.textContent = '';
                 return;
             }
 
             try {
                 const hiragana = wanakana.toHiragana(text);
                 conversionField.textContent = hiragana;
-                errorField.textContent = '';
             } catch (error) {
                 conversionField.textContent = '';
-                errorField.textContent = 'Error: ' + error.message;
+                conversionField.textContent = 'Error: ' + error.message;
             }
         }
 
